--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ services/__pycache__/equipamentosService.cpython-313.pyc
 userInterfaces/__pycache__/__init__.cpython-313.pyc
 userInterfaces/__pycache__/abaEquipamentos.cpython-313.pyc
 userInterfaces/__pycache__/abaManutencoes.cpython-313.pyc
+services/__pycache__/manutencoesService.cpython-313.pyc
