--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ userInterfaces/__pycache__/__init__.cpython-313.pyc
 userInterfaces/__pycache__/abaEquipamentos.cpython-313.pyc
 userInterfaces/__pycache__/abaManutencoes.cpython-313.pyc
 services/__pycache__/manutencoesService.cpython-313.pyc
+userInterfaces/__pycache__/abaNovaManutencao.cpython-313.pyc
